Con mi api key.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 	</head>
 	<body>
 		<span id="signinButton">
-			<!--Check for you API KEY here! https://cloud.google.com/console/project-->
 			<span class="g-signin" 
 				data-callback="signinCallback" 
-				data-clientid="APIKEY" 
+				data-clientid="966028746732-2ijcm2cd5c617vhgo24nr9qc91khote4.apps.googleusercontent.com" 
 				data-cookiepolicy="single_host_origin" 
 				data-requestvisibleactions="http://schemas.google.com/AddActivity" 
 				data-scope="https://www.googleapis.com/auth/plus.login"
@@ -20,8 +19,7 @@
 				<img id="badgeImage" src="" />
 			</div>
 		</div>
-		
-		
+
 		<script src="gplussigninlogic.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	</body>
